MT-hardening builder.ClasspathJar.knownPackageNames #3250
* use Set<String>
* cache a unmodifiable copy
* simplify PackageCacheEntry to record
* add missing final/volatile modifiers
* remove ClasspathJrt.PackageCache (only module names had been used)
* don't calculate unused location of module.info
* remove closeZipFileAtEnd (was always true when zipfile!=null)

https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3250